1. Signup Component Button Fix 2. Header Dropdown, Donate and Search button fix - Desktop 3. Footer Social media icons and text alignments.

--- a/wp-content/themes/seo-main/assets/styleguide/components/_signup.scss
+++ b/wp-content/themes/seo-main/assets/styleguide/components/_signup.scss
@@ -50,7 +50,7 @@ Styleguide 3.0
 
 .c-signup__button {
   float: left;
-  background: url('/seo/wp-content/themes/seo-main/assets/img/icons/icon-arrow-submit.svg') transparent left -1px center no-repeat;
+  background: url('/wp-content/themes/seo-main/assets/img/icons/icon-arrow-submit.svg') transparent left -1px center no-repeat;
   background-size: 22px 20px;
   border: 3px solid $red;
   border-radius: 100%;
@@ -61,7 +61,7 @@ Styleguide 3.0
 
   &:hover,
   &:focus {
-    background: url('/seo/wp-content/themes/seo-main/assets/img/icons/icon-arrow-submit--hover.svg') $red left -1px center no-repeat;
+    background: url('/wp-content/themes/seo-main/assets/img/icons/icon-arrow-submit--hover.svg') $red left -1px center no-repeat;
     background-size: 22px 20px;
     border: 3px solid red;
   }
